# AlphaForge

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  REPORT.md  VERSION.md  alembic.ini  backtest_order.py  pyproject.toml  requirements.txt  sitecustomize.py
.github/workflows/: backtest.yml  test.yml
alembic/: env.py
alembic/versions/: 0001_phase1_init.py  0002_adaptive_learning_lifecycle.py
data/backtest/: order_backtest_summary.csv  symbol_universe.csv
data/backtest_ci/: order_backtest_summary.csv  order_candidates.csv  order_lifecycle.csv  rejected_orders.csv  symbol_universe.csv
docs/: architecture_audit_2026-05-11.md  backtest_lifecycle_review.md  dev_branch_audit.md
prompts/shared/: core_rules.md  documentation_rules.md  lifecycle_rules.md  testing_rules.md
prompts/templates/: codex_task_template.md
src/alphaforge/: adaptive_learning.py  ai_brain.py  contracts.py  execution.py  live_readiness.py  order.py  persistence.py  portfolio_risk_engine.py  reconciliation.py  runtime.py  symbol_selector.py  training_engine.py
src/alphaforge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_adaptive_learning_foundation.py  test_backtest_order_scanner.py  test_execution_layer.py  test_live_readiness.py  test_persistence_fetch_expectancy.py  test_persistence_imports.py  test_persistence_patch1.py  test_phase123_foundations.py  test_phase2_integration.py  test_portfolio_risk_engine.py  test_reconciliation.py  test_runtime.py  test_schema.py  test_symbol_selector.py  test_trade_quality.py  test_trading_modes.py  test_training_engine.py
(+120 files in other folders)
